Headless: load chrome_100, chrome_200 pak files in addition to resources.pak when --headless is running.

Bug: 755738
Change-Id: I57ba12413e904ec266b5b683b9f489db2e466ec4
Reviewed-on: https://chromium-review.googlesource.com/616122
Reviewed-by: David Vallet <dvallet@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494602}
Former-commit-id: 74ccc9ea10c5f94bcdddb1e0dc052f3f6fdcc762